Add flashing text rendering updates